# aisd-semestr-work-1-sharipovilnaz

./: CMakeLists.txt  splay_tree.pptx  струтура дерева.drawio
include/: splay_tree.hpp
src/: main.cpp  splay_tree.cpp
